--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,19 @@
 body{
 	margin: 80px 0;
-	background: #AA92D2;
+	background: #5EAECC;
+	color: #06688E;
 }
 .container{
 	width: 600px;
 	margin: 0 auto;
 }
 .header{
-	color: #38176E;
+	color:#012533;
 }
 .game-intro{
 	margin-top: 0;
 	font-size: 18px;
-	color: #4E288D;
+	color: #06688E;
 }
 .game-container{
 	border: 1px solid black;
@@ -23,4 +24,12 @@ body{
 #c:active
 {
 	cursor: pointer;
+}
+.game-explantion{
+	margin-top: 60px;
+	font-size: 18px;
+}
+.important{
+	color: #012533;
+	font-size: 18px;
 }
